@@ -103,16 +103,18 @@ public:
 
 	void reset(clock_t Value = clock()) const { m_Begin = Value; }
 
-	operator bool() const
+	bool operator!() const
 	{
 		const auto Current = clock();
 		if (m_Interval > 0 && Current - m_Begin > m_Interval)
 		{
 			reset(Current);
-			return true;
+			return false;
 		}
-		return false;
+		return true;
 	}
+
+	EXPLICIT_OPERATOR_BOOL();
 
 private:
 	mutable clock_t m_Begin;
