@@ -42,7 +42,6 @@ private:
 	public:
 		unique_function_pointer(const os::rtdl::module& Module): m_module(Module) {}
 		operator T() const { return get_pointer(); }
-		operator bool() const { return get_pointer() != stub; }
 
 	private:
 		T get_pointer() const
